# lcr-smm

./: CMakeLists.txt  README.md  cost_function.h  cost_functor_autodiff.h  lcr-smm.cc  lcr.h  lcr.hpp  local_parameterization_se3.h  sqloss.h
